--- a/finalMVC/Views/_ViewStart.cshtml
+++ b/finalMVC/Views/_ViewStart.cshtml
@@ -1,3 +1,17 @@
 ﻿@{
-    Layout = "_Layout";
+   // Layout = "_Layout";
+    string CurrentReq = Convert.ToString(Context.Request.HttpContext.Request.RouteValues["Controller"]);
+    dynamic Layout;
+    switch (CurrentReq)
+    {
+        case "Formations":
+            //Admin layout
+            Layout = "~/Views/Shared/_BackendLayoutPage.cshtml";
+          
+            break;
+        default:
+            
+            Layout = "~/Views/Shared/_Layout.cshtml";
+            break;
+    }
 }
