--- a/finalMVC/Views/Dashboard/Dashboard.cshtml
+++ b/finalMVC/Views/Dashboard/Dashboard.cshtml
@@ -1,6 +1,5 @@
-﻿
-@{
-    ViewBag.Title = "Formations";
+﻿@{
+    ViewBag.Title = "Dashboard";
     Layout = "~/Views/Shared/_BackendLayout.cshtml";
 }
 <!-- Begin Page Content -->
@@ -16,5 +15,5 @@
 
     <!-- Content Row -->
     <div class="row">
-        </div>
-<!-- /.row -->
+    </div>
+    <!-- /.row -->
