--- a/finalMVC/Views/Shared/_siderbar.cshtml
+++ b/finalMVC/Views/Shared/_siderbar.cshtml
@@ -2,7 +2,7 @@
 <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
     <!-- Sidebar - Brand -->
-    <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
+    <a class="sidebar-brand d-flex align-items-center justify-content-center" href="@Url.Action("Dashboard", "Dashboard")">
         <div class="sidebar-brand-icon rotate-n-15">
             <i class="fas fa-laugh-wink"></i>
         </div>
@@ -14,7 +14,7 @@
 
     <!-- Nav Item - Dashboard -->
     <li class="nav-item active">
-        <a class="nav-link" href="index.html">
+        <a class="nav-link" href="@Url.Action("Dashboard", "Dashboard")">
             <i class="fas fa-fw fa-tachometer-alt"></i>
             <span>Dashboard</span>
         </a>
@@ -28,25 +28,25 @@
         Interface
     </div>
     <li class="nav-item">
-        <a class="nav-link" href="charts.html">
+        <a class="nav-link" href="@Url.Action("Index", "Formations")">
             <i class="fas fa-fw fa-chart-area"></i>
             <span>Formations</span>
         </a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="charts.html">
+        <a class="nav-link" href="@Url.Action("Index", "Secteur")">
             <i class="fas fa-fw fa-chart-area"></i>
             <span>Sections</span>
         </a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="charts.html">
+        <a class="nav-link" href="@Url.Action("Index", "Filiere")">
             <i class="fas fa-fw fa-chart-area"></i>
             <span>Filieres</span>
         </a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="charts.html">
+        <a class="nav-link" href="@Url.Action("Index", "Matiere")">
             <i class="fas fa-fw fa-chart-area"></i>
             <span>Matieres</span>
         </a>
@@ -58,7 +58,7 @@
 
     <!-- Nav Item - Charts -->
     <li class="nav-item">
-        <a class="nav-link" href="charts.html">
+        <a class="nav-link" href="@Url.Action("Index", "Formations")">
             <i class="fas fa-fw fa-chart-area"></i>
             <span>Utilisateurs</span>
         </a>
@@ -66,7 +66,7 @@
 
     <!-- Nav Item - Tables -->
     <li class="nav-item">
-        <a class="nav-link" href="tables.html">
+        <a class="nav-link" href="@Url.Action("Index", "Formations")">
             <i class="fas fa-fw fa-table"></i>
             <span>Visiteurs</span>
         </a>
